Updated formatting to fit slideshow better

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -195,7 +195,7 @@ input, select, textarea {
 			width: -ms-max-content;
 			width: max-content;
 			padding-bottom: 0.5rem;
-			margin: 0 0 2rem 0;
+			margin: 0 0 0 0;
 		}
 
 	h1 {
@@ -696,12 +696,21 @@ input, select, textarea {
 
 		.image.main {
 			display: block;
-			margin: 2.5rem 0;
+			margin: 0.75rem 0;
+			height: 300px;
 			width: 100%;
+			object-fit: contain;
+			object-position: center;
+			background-color: rgb(19, 19, 19);
 		}
 
 			.image.main img {
 				width: 100%;
+				height: 300px;
+				width: 100%;
+				object-fit: contain;
+				object-position: center;
+				background-color: rgb(19, 19, 19);
 			}
 
 		@media screen and (max-width: 736px) {
@@ -1658,3 +1667,92 @@ input, select, textarea {
 		body.is-preload #footer {
 			opacity: 0;
 		}
+
+/* Slideshow */
+* {box-sizing:border-box}
+
+/* Slideshow container */
+.slideshow-container {
+  width: 100%;
+  height: 300px;
+  object-fit: contain;
+  object-position: center;
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+  background-color: rgb(19, 19, 19);
+}
+
+/* Space after slideshow before text starts */
+.slideshow-container + p {
+	  margin-top: 2rem;
+}
+
+/* Hide the images by default */
+.mySlides1, .mySlides2, .mySlides3, .mySlides4 {
+  display: none;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  background-color: rgba(0, 0, 0, 0.6);
+  border-radius: 6px 6px 6px 6px;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 50%;
+  left: 25%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  background-color: rgba(0, 0, 0, 0.6);
+  border-radius: 0 0 6px 0;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+  z-index: 2;
+}
+
+/* Fading animation */
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
