--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1148,13 +1148,10 @@ input, select, textarea {
 			-webkit-transition-delay: 0.75s;
 			-ms-transition-delay: 0.75s;
 			transition-delay: 0.75s;
-			background-image: linear-gradient(to top, rgba(19, 21, 25, 0.5), rgba(19, 21, 25, 0.5)), url("../../images/overlay.png");
-			background-size: auto,
- 256px 256px;
-			background-position: center,
- center;
-			background-repeat: no-repeat,
- repeat;
+			background: #02132d;
+			background-image: linear-gradient(rgba(130, 130, 130, 0.2) .1em, transparent .1em), linear-gradient(90deg, rgba(83, 83, 83, 0.2) .1em, transparent .1em);
+			background-size: 2em 2em;
+			background-position: center;
 			z-index: 2;
 		}
 
@@ -1167,10 +1164,6 @@ input, select, textarea {
 			-webkit-transition: -webkit-transform 0.325s ease-in-out, -webkit-filter 0.325s ease-in-out;
 			-ms-transition: -ms-transform 0.325s ease-in-out, -ms-filter 0.325s ease-in-out;
 			transition: transform 0.325s ease-in-out, filter 0.325s ease-in-out;
-			background-image: url("../../images/bg.jpg");
-			background-position: center;
-			background-size: cover;
-			background-repeat: no-repeat;
 			z-index: 1;
 		}
 
@@ -1305,7 +1298,16 @@ input, select, textarea {
 			line-height: 5.5rem;
 			border: solid 1px #ffffff;
 			border-radius: 100%;
+			overflow: hidden;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			background-color: #0e1428; /* bg for itchpic */
 		}
+			#header .logo img {
+				width: 90%;
+				height: 90%;
+			}
 
 			#header .logo .icon:before {
 				font-size: 2rem;
