--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1148,7 +1148,7 @@ input, select, textarea {
 			-webkit-transition-delay: 0.75s;
 			-ms-transition-delay: 0.75s;
 			transition-delay: 0.75s;
-			background: #02132d;
+			background: #010c28;
 			background-image: linear-gradient(rgba(130, 130, 130, 0.2) .1em, transparent .1em), linear-gradient(90deg, rgba(83, 83, 83, 0.2) .1em, transparent .1em);
 			background-size: 2em 2em;
 			background-position: center;
